<resources>
    <string name="app_name">Job-Monitoring</string>
    <string name="img_profil_perusahaan">img_profil_perusahaan</string>
    <string name="nama_profil_perusahaan">Nama Perusahaan</string>
    <string name="alamat_perusahaan">Bandung, Jawa barat, Indonesia</string>
    <string name="text_apps_menu">Apps</string>
    <string name="menu_divisi">Divisi</string>
    <string name="menu_karyawan">Karyawan</string>
    <string name="menu_presensi">Presensi</string>
    <string name="menu_pekerjaan">Pekerjaan</string>
    <string name="menu_pengaturan">Pengaturan</string>
    <string name="img_menu_divisi">img_menu_divisi</string>
    <string name="img_menu_karyawan">img_menu_karyawan</string>
    <string name="img_menu_presensi">img_menu_presensi</string>
    <string name="img_menu_pekerjaan">img_menu_pekerjaan</string>
    <string name="img_menu_pengaturan">img_menu_pengaturan</string>
    <string name="hk_img_profil_karyawan">img_profil_karyawan</string>
    <string name="hk_nama_karyawan">Nama Karyawan</string>
    <string name="hk_text_apps_menu">Apps</string>
    <string name="hk_menu_presensi">Presensi</string>
    <string name="hk_img_menu_presensi">img_menu_presensi</string>
    <string name="hk_menu_pekerjaan">Pekerjaan</string>
    <string name="hk_img_menu_pekerjaan">img_menu_pekerjaan</string>
    <string name="hk_menu_pengaturan">Pengaturan</string>
    <string name="hk_img_menu_pengaturan">img_menu_pengaturan</string>
    <string name="dp_button_divisi">Tambah Divisi</string>
    <string name="dp_img_divisi">img_divisi</string>
    <string name="dp_divisi">Divisi</string>
    <string name="dp_jumlah_divisi">0</string>
    <string name="dp_search">Cari Divisi …</string>
    <string name="dp_titik3">icon_titik3</string>
    <string name="dp_nama_divisi">Android Developer</string>
    <string name="td_judul">Tambah Divisi</string>
    <string name="td_nama_divisi">Nama Divisi</string>
    <string name="td_isiform_nama_divisi">Nama Divisi</string>
    <string name="td_button_tambahdivisi">Tambah Divisi</string>
    <string name="ed_edit_divisi">Edit Divisi</string>
    <string name="ed_nama_divisi">Nama Divisi</string>
    <string name="ed_isiform_nama_divisi">Nama Divisi</string>
    <string name="ed_button_simpan">Simpan</string>
    <string name="menu_edit_divisi">Edit Divisi</string>
    <string name="menu_delete_divisi">Hapus Divisi</string>
    <string name="pesan_hapus_divisi">Hapus Divisi?</string>
    <string name="pk_button_pekerjaan">Tambah Pekerjaan</string>
    <string name="pk_img_pekerjaan">img_pekerjaan</string>
    <string name="pk_pekerjaan">Pekerjaan</string>
    <string name="pk_jumlah_pekerjaan">0</string>
    <string name="pk_search">Cari Pekerjaan …</string>
    <string name="pk_filter">filter</string>
    <string-array name="pk_status">
        <item>Pilih Status</item>
        <item>Selesai</item>
        <item>Belum selesai</item>
    </string-array>
    <string name="pk_img_profil">img_profil</string>
    <string name="pk_titik3">icon_titik3</string>
    <string name="pk_selesai">Selesai</string>
    <string name="pk_belumselesai">Belum Selesai</string>
    <string name="pk_pekerjaanselesai">Layout Login</string>
    <string name="pk_pekerjaanbelumselesai">Layout Dashboard</string>
    <string name="pk_namaselesai">Android</string>
    <string name="pk_namabelumselessai">Boboboy</string>
    <string name="tp_judul">Tambah Pekerjaan</string>
    <string name="tp_nama_pekerjaan">Nama Pekerjaan</string>
    <string name="tp_isiform_nama_pekerjaan">Nama Pekerjaan</string>
    <string name="tp_desc_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="tp_isiform_desc_pekerjaan">Desc…</string>
    <string name="tp_pilih_karyawan">Karyawan</string>
    <string name="tp_spinner">spinner</string>
    <string name="tp_button_tambahpekerjaan">Tambah Pekerjaan</string>
    <string-array name="tp_karyawan">
        <item>Pilih Karyawan</item>
    </string-array>
    <string name="tp_pilihDivisi">Pilih Divisi</string>
    <string name="ep_judul">Edit Pekerjaan</string>
    <string name="ep_nama_pekerjaan">Nama Pekerjaan</string>
    <string name="ep_isiform_nama_pekerjaan">Nama Pekerjaan</string>
    <string name="ep_desc_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="ep_isiform_desc_pekerjaan">Desc…</string>
    <string name="ep_pilih_karyawan">Karyawan</string>
    <string name="ep_spinner">spinner</string>
    <string name="ep_button_simpan">Simpan</string>
    <string-array name="ep_karyawan">
        <item>Pilih Karyawan</item>
    </string-array>
    <string name="menu_edit_pekerjaan">Edit Pekerjaan</string>
    <string name="menu_delete_pekerjaan">Hapus Pekerjaan</string>
    <string name="pesan_hapus_pekerjaan">Hapus Pekerjaan?</string>
    <string name="kp_button_karyawan">Tambah Karyawan</string>
    <string name="kp_img_karyawan">img_karyawan</string>
    <string name="kp_Karyawan">Karyawan</string>
    <string name="kp_jumlah_karyawan">0</string>
    <string name="kp_search">Cari Karyawan …</string>
    <string-array name="kp_pilih_divisi">
        <item>Pilih Divisi</item>
        <item>Android </item>
        <item>Web</item>
    </string-array>
    <string name="kp_filter">Filter</string>
    <string name="kp_img_profil">img_profil</string>
    <string name="kp_titik3">icon_titik3</string>
    <string name="kp_nama_divisi">Android Developer</string>
    <string name="kp_nama">Papa Zola</string>
    <string name="kp_email">papazola@gmail.com</string>
    <string name="tk_judul">Tambah Karyawan</string>
    <string name="tk_nama_karyawan">Nama Karyawan</string>
    <string name="tk_isiform_nama_karyawan">Nama Karyawan</string>
    <string name="tk_tanggallahir_karyawan">Tanggal Lahir Karyawan</string>
    <string name="tk_isiform_tanggallahir_karyawan">Tanggal Lahir Karyawan</string>
    <string name="tk_jenis_kelamin_karyawan">Jenis Kelamin</string>
    <string-array name="tk_isiform_jenis_kelamin">
        <item>Jenis Kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="tk_alamat_karyawan">Alamat Karyawan</string>
    <string name="tk_isiform_alamat_karyawan">Alamat</string>
    <string name="tk_nohp_karyawan">No Handphone Karyawan</string>
    <string name="tk_isiform_nohp_karyawan">No. Handphone</string>
    <string name="tk_pilih_divisi_karyawan">Pilih Divisi Karyawan</string>
    <string-array name="tk_isiform_pilih_divisi">
        <item>Pilih Divisi</item>
    </string-array>
    <string name="tk_email_karyawan">Email Karyawan</string>
    <string name="tk_isiform_karyawan">Email Karyawan</string>
    <string name="tk_password_karyawan">Password Karyawan</string>
    <string name="tk_isiform_password_karyawan">Password</string>
    <string name="tk_button_simpan">Tambah Karyawan</string>
    <string name="tk_img_mata">img_mata</string>
    <string name="ek_judul">Edit Karyawan</string>
    <string name="ek_button_gantipassword">Ganti Password</string>
    <string name="ek_nama_karyawan">Nama Karyawan</string>
    <string name="ek_isiform_nama_karyawan">Nama Karyawan</string>
    <string name="ek_tanggallahir_karyawan">Tanggal Lahir Karyawan</string>
    <string name="ek_isiform_tanggallahir_karyawan">Tanggal Lahir Karyawan</string>
    <string name="ek_jenis_kelamin_karyawan">Jenis Kelamin</string>
    <string-array name="ek_isiform_jenis_kelamin">
        <item>Jenis Kelamin</item>
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="ek_alamat_karyawan">Alamat Karyawan</string>
    <string name="ek_isiform_alamat_karyawan">Alamat Karyawan</string>
    <string name="ek_nohp_karyawan">No Handphone Karyawan</string>
    <string name="ek_isiform_nohp_karyawan">No. Handphone</string>
    <string name="ek_pilih_divisi_karyawan">Pilih Divisi Karyawan</string>
    <string-array name="ek_isiform_pilih_divisi">
        <item>Pilih Divisi</item>
    </string-array>
    <string name="ek_email_karyawan">Email Karyawan</string>
    <string name="ek_isiform_karyawan">Email Karyawan</string>
    <string name="ek_password_karyawan">Password Karyawan</string>
    <string name="ek_isiform_password_karyawan">Password</string>
    <string name="ek_button_simpan">Simpan</string>
    <string name="menu_edit_karyawan">Edit Karyawan</string>
    <string name="menu_delete_karyawan">Hapus Karyawan</string>
    <string name="pesan_hapus_karyawan">Hapus Karyawan?</string>
    <string name="fk_filter">Filter</string>
    <string name="fk_berdasarkandivisi">Pilih Divisi</string>
    <string name="fk_nama_divisi">Android Developer</string>
    <string name="ppfk_filter">Filter</string>
    <string name="ppfk_berdasarkandivisi">Berdasarkan Divisi</string>
    <string name="ppfk_nama_divisi">Android Developer</string>
    <string name="pfk_filter">Filter</string>
    <string name="pfk_berdasarkanstatus">- Pilih Status</string>
    <string name="pfk_divisi">Divisi</string>
    <string name="pfk_semuastatus">Semua Status</string>
    <string name="pfk_selesai">Status Selesai</string>
    <string name="pfk_belumselesai">Status Belum Selesai</string>
    <string name="dpp_pekerjaan">Detail Pekerjaan</string>
    <string name="ddp_divisi">Divisi :</string>
    <string name="ddp_isidivisi">Android Developer</string>
    <string name="ddp_nama">Karyawan :</string>
    <string name="ddp_isinama">Papa Zola</string>
    <string name="ddp_namapekerjaan">Judul Pekerjaan :</string>
    <string name="ddp_isinamapekerjaan">Membuat Danau Toba</string>
    <string name="ddp_desc">Deskripsi :</string>
    <string name="ddp_isidesc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="ddp_status">Status :</string>
    <string name="ddp_isistatusselesai">Selesai</string>
    <string name="ddp_isistatusbelumselesai">Belum Selesai</string>
    <string name="ddp_progress">Progress :</string>
    <string name="ddp_bukti">Bukti Pekerjaan :</string>
    <string name="ddp_textprogress">0</string>
    <string name="ddp_presen">%</string>
    <string name="hpk_img">img</string>
    <string name="hpk_nama">Papa Zola</string>
    <string name="hpk_divisi">Divisi :</string>
    <string name="hpk_textDivisi">Android Developer</string>
    <string name="hpk_email">Email :</string>
    <string name="hpk_textEmail">papazola@gmail.com</string>
    <string name="hpk_tanggal">Tanggal Lahir :</string>
    <string name="hpk_textTanggal">06/12/01</string>
    <string name="hpk_jk">Jenis Kelamin :</string>
    <string name="hpk_textJk">Laki-Laki</string>
    <string name="hpk_nohp">No.Handphone :</string>
    <string name="hpk_textNohp">082124169616</string>
    <string name="hpk_alamat">Alamat :</string>
    <string name="hpk_textAlamat">Bandung, Jawa barat,Indonesia</string>
    <string name="gp_judul">Ganti Password</string>
    <string name="gp_password_lama">Password Lama</string>
    <string name="gp_isiform_password_lama">Masukan Password Lama</string>
    <string name="gp_password_baru1">Password Baru</string>
    <string name="gp_isiform_password_baru1">Masukan Password Baru</string>
    <string name="gp_password_baru2">Password Baru</string>
    <string name="gp_isiform_password_baru2">Masukan Ulang Password</string>
    <string name="gp_button_simpan">Simpan</string>
    <string name="kpk_selesai">Selesai</string>
    <string name="kpk_belumselesai">Belum Selesai</string>
    <string name="kpk_pekerjaanselesai">Layout Login</string>
    <string name="kpk_pekerjaanbelumselesai">Layout Dashboard</string>
    <string name="prr_masuk">00.00</string>
    <string name="prr_keluar">00.00</string>
    <string name="prr_buttmasuk">Masuk</string>
    <string name="prr_buttkeluar">Keluar</string>
    <string name="prr_tanggal">2022-12-06</string>
</resources>